# RadKit

./: pyproject.toml
cli/: commands.py  main.py
core/: config.py  engine.py  exceptions.py  logging_config.py  models.py  plan_engine.py
core/dictionaries/C_lan/: dictionary
core/dictionaries/E_develop/: dictionary  dictionary.3gpp  dictionary.ascend  dictionary.huawei  dictionary.mikrotik  dictionary.rfc2868
core/radius_clients/: __init__.py  base_client.py  cisco.py  fortigate.py  mikrotik.py
scenarios/: simple_cisco_session.yml  simple_mikrotik_session.yml
scenarios/plans/: sample_plan.yml
web/: web_app.py
web/static/: app.js
web/templates/: index.html
